derive-ex-tests/tests/compile_fail/common/unsupported_trait.rs
use derive_ex::derive_ex;

#[derive_ex(Add)]
enum X {
    A,
    B,
}

fn main() {}
